// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuildSidebar Should render with data 1`] = `
<div>
   
  <div
    class="sc-dlfnuX sc-pGacB jmIxJI xhkqm"
  >
    <div
      class="sc-dlfnuX sc-jrAFXE jmIxJI kfDExC"
    >
      <div
        class="sc-kEjbQP fycuIK"
      >
        <div
          class="sc-iqHYmW jrXVBE"
        >
          <img
            alt="Test Guild"
            class="sc-crrszt citRkA"
            src="dxdao-icon.svg"
          />
          <h1
            class="sc-fubCzh sc-dQoVA gZcuMh fTfxub"
            size="2"
          >
            Test Guild
          </h1>
        </div>
        <div
          class="sc-dlfnuX sc-bqyKOL jmIxJI jcgoHD"
        >
          members
        </div>
      </div>
    </div>
    <div
      class="sc-dlfnuX sc-gKseQn sc-kstqJO jmIxJI hzfPLC eKyYJL"
    >
      <a
        class="sc-iBPTik sc-hBEYId eLFkjO cyASOH"
        href="#"
      >
        proposals
      </a>
      <a
        class="sc-iBPTik sc-hBEYId eLFkjO cyASOH"
        href="#"
      >
        members
      </a>
      <a
        class="sc-iBPTik sc-hBEYId eLFkjO cyASOH"
        href="#"
      >
        portfolio
      </a>
      <a
        class="sc-iBPTik sc-hBEYId eLFkjO cyASOH"
        href="#"
      >
        settings
      </a>
    </div>
  </div>
   
</div>
`;

exports[`GuildSidebar Should render without data 1`] = `
<div>
   
  <div
    class="sc-dlfnuX sc-pGacB jmIxJI xhkqm"
  >
    <div
      class="sc-dlfnuX sc-jrAFXE jmIxJI kfDExC"
    >
      <div
        class="sc-kEjbQP fycuIK"
      >
        <div
          class="sc-iqHYmW jrXVBE"
        >
          <img
            class="sc-crrszt citRkA"
            src="dxdao-icon.svg"
          />
          <h1
            class="sc-fubCzh sc-dQoVA gZcuMh fTfxub"
            size="2"
          >
            <div
              class="sc-bdfBQB"
            >
              <span
                aria-busy="true"
                aria-live="polite"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 100px; height: 16px; border-radius: 50px; --base-color: #333; --highlight-color: #555;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </h1>
        </div>
        <div
          class="sc-dlfnuX sc-bqyKOL jmIxJI jcgoHD"
        >
          <div
            class="sc-bdfBQB"
          >
            <span
              aria-busy="true"
              aria-live="polite"
            >
              <span
                class="react-loading-skeleton"
                style="width: 100px; height: 16px; border-radius: 50px; --base-color: #333; --highlight-color: #555;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-dlfnuX sc-gKseQn sc-kstqJO jmIxJI hzfPLC eKyYJL"
    >
      <a
        class="sc-iBPTik sc-hBEYId eLFkjO cyASOH"
        href="#"
      >
        proposals
      </a>
      <a
        class="sc-iBPTik sc-hBEYId eLFkjO cyASOH"
        href="#"
      >
        members
      </a>
      <a
        class="sc-iBPTik sc-hBEYId eLFkjO cyASOH"
        href="#"
      >
        portfolio
      </a>
      <a
        class="sc-iBPTik sc-hBEYId eLFkjO cyASOH"
        href="#"
      >
        settings
      </a>
    </div>
  </div>
   
</div>
`;
